{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 71,
  "lineage": "47cb7c19-2d05-4d2a-27d0-dc7eddd3b474",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:024848459309:instance/i-029e99770ba88235b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-029e99770ba88235b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00a48c4028e2cdd4a",
            "private_dns": "ip-10-0-2-39.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.39",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03d156777cd1bf650",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d2e25f061b4523e5",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-private-instance",
              "Project": "terraform-lab",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-private-instance",
              "Project": "terraform-lab",
              "Type": "Private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07528560db0bf5251"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.private_sg",
            "module.security_groups.aws_security_group.public_sg",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:024848459309:instance/i-04c9e182eec02c116",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c9e182eec02c116",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-079c6f71e8d1763e6",
            "private_dns": "ip-10-0-1-39.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.39",
            "public_dns": "ec2-54-167-63-149.compute-1.amazonaws.com",
            "public_ip": "54.167.63.149",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-042f1815c6c95c180",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab04e161ab989ce5",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-public-instance",
              "Project": "terraform-lab",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-public-instance",
              "Project": "terraform-lab",
              "Type": "Public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0006d604aa15e5fe8"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848459309:security-group/sg-07528560db0bf5251",
            "description": "Security group for private EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07528560db0bf5251",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from public subnet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0006d604aa15e5fe8"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from public subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0006d604aa15e5fe8"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-lab-dev-private-sg",
            "name_prefix": "",
            "owner_id": "024848459309",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-private-sg",
              "Project": "terraform-lab",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-private-sg",
              "Project": "terraform-lab",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-007f7d81545ed1000"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.public_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848459309:security-group/sg-0006d604aa15e5fe8",
            "description": "Security group for public EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0006d604aa15e5fe8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-lab-dev-public-sg",
            "name_prefix": "",
            "owner_id": "024848459309",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-public-sg",
              "Project": "terraform-lab",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-public-sg",
              "Project": "terraform-lab",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-007f7d81545ed1000"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d98c930b93c4b3d",
            "arn": "arn:aws:ec2:us-east-1:024848459309:elastic-ip/eipalloc-01d98c930b93c4b3d",
            "domain": "vpc",
            "id": "eipalloc-01d98c930b93c4b3d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-2-74-148.compute-1.amazonaws.com",
            "public_ip": "52.2.74.148",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-nat-eip",
              "Project": "terraform-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-nat-eip",
              "Project": "terraform-lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848459309:internet-gateway/igw-0bf33c762b8ea7893",
            "id": "igw-0bf33c762b8ea7893",
            "owner_id": "024848459309",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-igw",
              "Project": "terraform-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-igw",
              "Project": "terraform-lab"
            },
            "vpc_id": "vpc-007f7d81545ed1000"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d98c930b93c4b3d",
            "association_id": "eipassoc-0aba83f724b1c0231",
            "connectivity_type": "public",
            "id": "nat-0fe2c68a46a91cba3",
            "network_interface_id": "eni-01c41415cfb26deba",
            "private_ip": "10.0.1.211",
            "public_ip": "52.2.74.148",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ab04e161ab989ce5",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-nat-gateway",
              "Project": "terraform-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-nat-gateway",
              "Project": "terraform-lab"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848459309:route-table/rtb-06ebc9564878b2109",
            "id": "rtb-06ebc9564878b2109",
            "owner_id": "024848459309",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fe2c68a46a91cba3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-private-rt",
              "Project": "terraform-lab",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-private-rt",
              "Project": "terraform-lab",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-007f7d81545ed1000"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848459309:route-table/rtb-04db0e7637f9e5c2f",
            "id": "rtb-04db0e7637f9e5c2f",
            "owner_id": "024848459309",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf33c762b8ea7893",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-public-rt",
              "Project": "terraform-lab",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-public-rt",
              "Project": "terraform-lab",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-007f7d81545ed1000"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae956b452de4142b",
            "region": "us-east-1",
            "route_table_id": "rtb-06ebc9564878b2109",
            "subnet_id": "subnet-0d2e25f061b4523e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02890268decc40911",
            "region": "us-east-1",
            "route_table_id": "rtb-04db0e7637f9e5c2f",
            "subnet_id": "subnet-0ab04e161ab989ce5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848459309:subnet/subnet-0d2e25f061b4523e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2e25f061b4523e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024848459309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-private-subnet",
              "Project": "terraform-lab",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-private-subnet",
              "Project": "terraform-lab",
              "Type": "Private"
            },
            "vpc_id": "vpc-007f7d81545ed1000"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848459309:subnet/subnet-0ab04e161ab989ce5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab04e161ab989ce5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024848459309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-public-subnet",
              "Project": "terraform-lab",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-public-subnet",
              "Project": "terraform-lab",
              "Type": "Public"
            },
            "vpc_id": "vpc-007f7d81545ed1000"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848459309:vpc/vpc-007f7d81545ed1000",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0020b898d74476d91",
            "default_route_table_id": "rtb-0749edf3909b7607f",
            "default_security_group_id": "sg-000dc59d09cbb7591",
            "dhcp_options_id": "dopt-0bbb2ac9910eea8e7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-007f7d81545ed1000",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0749edf3909b7607f",
            "owner_id": "024848459309",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-vpc",
              "Project": "terraform-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-lab-dev-vpc",
              "Project": "terraform-lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}